maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:18: error: not found: type int
def eviteMur(i:int){
               ^Escaper:37: error: reassignment to val
    i =i+1
      ^Escaper:40: error: reassignment to val
    i= i-1
     ^